# opencv-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.cargo/: mutants.toml
.github/workflows/: ci.yml  release.yml
opencv-rs/: Cargo.toml  README.md
opencv-rs-core/: Cargo.toml  README.md
opencv-rs-core/src/: contract_tests.rs  error.rs  image_encoder.rs  image_ops.rs  lib.rs  mat_view.rs  types.rs  video_capture.rs
opencv-rs-fake/: Cargo.toml  README.md
opencv-rs-fake/src/: image_encoder.rs  image_ops.rs  lib.rs  video_capture.rs
opencv-rs-fake/tests/: contract.rs
opencv-rs-ffi/: Cargo.toml  README.md  build.rs
opencv-rs-ffi/src/: conversion.rs  image_encoder.rs  image_ops.rs  lib.rs  mat_view.rs  video_capture.rs
opencv-rs-ffi/tests/: contract.rs  equivalence.rs
opencv-rs-ffi/tests/equivalence/: absdiff.rs  convert_scale_abs.rs  count_non_zero.rs  cvt_color.rs  min_max_loc.rs  threshold.rs
opencv-rs/src/: lib.rs
