[workspace]
resolver = "2"
members = ["opencv-rs-core", "opencv-rs-fake", "opencv-rs-ffi", "opencv-rs"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GoCleverOrg/opencv-rs"
authors = ["GoClever <opensource@goclever.com>"]
rust-version = "1.84"

[workspace.dependencies]
thiserror = "1.0"

# Scoped profile for cargo-mutants runs. Inherits from `dev` so incremental
# compilation still works across experiments; trims debuginfo and forces a
# single codegen unit for marginally faster warm-path rebuilds. Applied via
# `cargo mutants --profile=mutants-bench` from the Makefile targets.
[profile.mutants-bench]
inherits = "dev"
codegen-units = 1
debug = 0
